# ChangeLog for dev-perl/HTML-Mason
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Mason/ChangeLog,v 1.57 2006/10/21 14:14:01 dertobi123 Exp $

  21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  HTML-Mason-1.33.ebuild:
  ppc stable

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org> HTML-Mason-1.33.ebuild:
  Stable on Alpha.

  09 Oct 2006; Michael Cummings <mcummings@gentoo.org>
  HTML-Mason-1.26.ebuild, HTML-Mason-1.32.ebuild, HTML-Mason-1.33.ebuild:
  Marking amd64, sparc stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  HTML-Mason-1.26.ebuild, HTML-Mason-1.32.ebuild, HTML-Mason-1.33.ebuild:
  Adding perl dep; fixed DEPEND

  18 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  HTML-Mason-1.32.ebuild, HTML-Mason-1.33.ebuild:
  Forcing mb version

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  HTML-Mason-1.32.ebuild:
  Marking stable amd64

*HTML-Mason-1.33 (24 Jun 2006)

  24 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  +HTML-Mason-1.33.ebuild:
  Version bump upstream

  06 Jun 2006; <mcummings@gentoo.org> HTML-Mason-1.26.ebuild,
  HTML-Mason-1.32.ebuild:
  Bug 134781

  11 Apr 2006; <mcummings@gentoo.org> HTML-Mason-1.32.ebuild:
  Marking sparc stable

  11 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  HTML-Mason-1.32.ebuild:
  Stable on ppc.

  26 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  HTML-Mason-1.32.ebuild, -HTML-Mason-1.3101.ebuild:
  Marking 1.32 stable, removing 1.3101

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  HTML-Mason-1.26.ebuild, HTML-Mason-1.32.ebuild, HTML-Mason-1.3101.ebuild:
  Virtuals for perl-core

*HTML-Mason-1.32 (16 Jan 2006)

  16 Jan 2006; Michael Cummings <mcummings@gentoo.org>
  +HTML-Mason-1.32.ebuild:
  Version bump

  30 Dec 2005; <mcumming@gentoo.org> HTML-Mason-1.26.ebuild,
  HTML-Mason-1.3101.ebuild:
  Scalar-List-Utils migrated to perl-core.
