@@ -1,6 +1,10 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST HTML-Mason-1.26.tar.gz 331325 RMD160 4c8092cdcf93087da26e9c2de3d8c3809e37e97e SHA1 bf9955a02e3c8e062f6f94edd9cf440c0752ec54 SHA256 5cf9cdd8b18b07e942690c93aa4125f19c7128b7f318b9107179a7c25cb3eae5
 DIST HTML-Mason-1.32.tar.gz 382521 RMD160 a6bb0a8b979d4e8b94614a77f911d1aa887aeac8 SHA1 411cb70053d41287b99fd88f39851069d653e173 SHA256 623c0d221773372c0f4013ab17a0af1c1b10bd0a1bc7bd63afb5c942489522cc
 DIST HTML-Mason-1.33.tar.gz 383225 RMD160 6143709c72b03c1148c089abb19e1eb0189aa6f1 SHA1 788651e25b64502432ebf78790bd98fca51f703e SHA256 78605ea4ae0a874538cddb8778b8f243d548e512decf6d95b146e0252690361d
+DIST HTML-Mason-1.35.tar.gz 386408 RMD160 0782bc005b50d63beebc493d926505a1d735e4c5 SHA1 bcc91484523c6d9bd747c467e12e821c2cf08384 SHA256 01c75ebc523b77b88d5754fa93a283eeff77bcf799536db8697b61daf42f36bd
 EBUILD HTML-Mason-1.26.ebuild 1743 RMD160 92c575bcf81fedab7a2f80fe3e1f1c544084bf61 SHA1 682d31a9b9380232079d5d6a91b9b94dfcc7a436 SHA256 304f69172a85e6b6658cd7df0892bbd0adde6c2c8dd4790c9d916cbbf9e227c4
 MD5 a0746b3cd2dfd12ddb98fb48f115e687 HTML-Mason-1.26.ebuild 1743
 RMD160 92c575bcf81fedab7a2f80fe3e1f1c544084bf61 HTML-Mason-1.26.ebuild 1743
@@ -13,10 +17,14 @@ EBUILD HTML-Mason-1.33.ebuild 1649 RMD160 f17ef176518022e046ae88ce81b46e969aa1e5
 MD5 40429e2bf3b11a4c693a5eb7288e00bf HTML-Mason-1.33.ebuild 1649
 RMD160 f17ef176518022e046ae88ce81b46e969aa1e5bd HTML-Mason-1.33.ebuild 1649
 SHA256 788acebf9fec6a663614fb850afdafd91f8e5f144f9ee8a4d86591f274419044 HTML-Mason-1.33.ebuild 1649
-MISC ChangeLog 8816 RMD160 2351e28bec048e65c84f8523fbf03f3cdc9bac76 SHA1 7cb00a81590f0329cd837adfbb5a71f7531d6edb SHA256 46382b7befecede6a292222b1336e50975a60512737bd73117f6e5834d41aa77
-MD5 c583cf5bd85a9188e5469f039f401c23 ChangeLog 8816
-RMD160 2351e28bec048e65c84f8523fbf03f3cdc9bac76 ChangeLog 8816
-SHA256 46382b7befecede6a292222b1336e50975a60512737bd73117f6e5834d41aa77 ChangeLog 8816
+EBUILD HTML-Mason-1.35.ebuild 1652 RMD160 ae37ad2c93cf7aeba32ffebc519fc421e9187280 SHA1 211d417f3840e9f328f4ff71872d8049201ff09e SHA256 ded91a2ca7eb98d8525132605b131514d7294ccb039412a9d06a42c6c10a36dd
+MD5 9e70e37370be4bfeaee7806c2d43ae4f HTML-Mason-1.35.ebuild 1652
+RMD160 ae37ad2c93cf7aeba32ffebc519fc421e9187280 HTML-Mason-1.35.ebuild 1652
+SHA256 ded91a2ca7eb98d8525132605b131514d7294ccb039412a9d06a42c6c10a36dd HTML-Mason-1.35.ebuild 1652
+MISC ChangeLog 8945 RMD160 2a59f2c771b08ffe785bb915902d1324bd2404c7 SHA1 80fffa6c569f1e5285e786b89b6d963d77913b79 SHA256 164c0eda6c6649b10296155019cd3e358935b3704a309dfee0b46becbb3a702c
+MD5 4244a2f57fa900c3c4f84c05d9e4e7f3 ChangeLog 8945
+RMD160 2a59f2c771b08ffe785bb915902d1324bd2404c7 ChangeLog 8945
+SHA256 164c0eda6c6649b10296155019cd3e358935b3704a309dfee0b46becbb3a702c ChangeLog 8945
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 MD5 e2d8f1bf77722def1dd432e26455c818 metadata.xml 305
 RMD160 647980838c590f54441a053916ea629e53e551c0 metadata.xml 305
@@ -30,3 +38,13 @@ SHA256 899a836fcee6daa5e4c00f13a21cd91313a3c63424427d8867a965b339dab252 files/di
 MD5 af066c0a191a87109d68a91aab85360f files/digest-HTML-Mason-1.33 247
 RMD160 e10d79f2ae68b67f98068c60b28d4628d0b11d01 files/digest-HTML-Mason-1.33 247
 SHA256 d145559355ab2692ee79a9758b2dadc719326427a3ba9aa9f29690c10f4caa45 files/digest-HTML-Mason-1.33 247
+MD5 44c544fcc8358a3f29de4210af618d7e files/digest-HTML-Mason-1.35 247
+RMD160 01517e0ed7243205651c67757b703b07211738ed files/digest-HTML-Mason-1.35 247
+SHA256 2ca672cdd60f9bbff29d1bbbdeacd9e97d61d8e59eaf13090f94c0a7991a4efa files/digest-HTML-Mason-1.35 247
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFPR3stG5z4I8BtQoRAvk3AJ4ipUcGqnZVRi120S9NrHbksNCuMQCfRPkR
+6qD+Yh5RoBDNF45yie0hXEQ=
+=GTNl
+-----END PGP SIGNATURE-----
