@@ -1,0 +1,3 @@
+MD5 c09f77e2af500b51d22e0238c0534994 HTML-Mason-1.35.tar.gz 386408
+RMD160 0782bc005b50d63beebc493d926505a1d735e4c5 HTML-Mason-1.35.tar.gz 386408
+SHA256 01c75ebc523b77b88d5754fa93a283eeff77bcf799536db8697b61daf42f36bd HTML-Mason-1.35.tar.gz 386408
