@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/HTML-Mason
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Mason/ChangeLog,v 1.57 2006/10/21 14:14:01 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Mason/ChangeLog,v 1.58 2006/10/23 19:54:14 mcummings Exp $
+
+*HTML-Mason-1.35 (23 Oct 2006)
+
+  23 Oct 2006; Michael Cummings <mcummings@gentoo.org>
+  +HTML-Mason-1.35.ebuild:
+  Version bump
 
   21 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
   HTML-Mason-1.33.ebuild:
